# GECCO

./: .gitignore  .gitlab-ci.yml  .remote-sync.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  gecco.py  orion.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: galaxy.yml  list_requirements.py  package.yml  release.yml  requirements.txt  test.yml
ci/gitlab/: after_script.hmmfilter.py  test.before_script.sh  test.script.sh
data/: bio_pfams.txt  cluster_pfams.txt
data/knn/: type_labels.tsv
data/model/: f5_eval_p_t50.crf.model  f5_eval_s_t50.crf.model  feat_v8_param_v2.crf.model
docs/: .gitignore  api.rst  conf.py  index.rst  install.rst  integrations.rst  requirements.txt  training.rst
docs/_static/css/: main.css
docs/_static/js/: apitoc.js  homepage.js
docs/_templates/: layout.html  summary.rst
docs/api/: crf.rst  hmmer.rst  index.rst  interpro.rst  knn.rst  model.rst  orf.rst  refine.rst  types.rst
galaxy/: .shed.yml  README.rst  gecco.xml
galaxy/test-data/: BGC0001866.1_cluster_1.gbk  BGC0001866.fna  clusters.tsv  features.tsv  genes.tsv  sideload.json
gecco/: __init__.py  __main__.py  _base.py  _meta.py  bgc.py  crf.py  cross_validation.py  hmmer.py  interface.py  knn.py  model.py  orf.py  preprocessing.py  refine.py  utils.py
gecco/cli/: __init__.py  _log.py  _meta.py  _utils.py
gecco/cli/commands/: __init__.py  _base.py  _common.py  _error.py  _main.py  _mixins.py  _parser.py  annotate.py  convert.py  cv.py  embed.py  help.py  predict.py  run.py  train.py  tune.py
gecco/cli/commands_new/: __init__.py  __main__.py  _parser.py  annotate.py
gecco/crf/: __init__.py  __init__.py.BAK  cv.py  features.py  model.pkl  model.pkl.md5  postprocessing.py  preprocessing.py  select.py
gecco/data/: __init__.py
gecco/data/hmms/: .gitignore  CATH_FunFam.ini  Panther.ini  Pfam-A.hmm.gz.md5  Pfam.hmm.gz.md5  Pfam.ini  Tigrfam.hmm.gz.md5  Tigrfam.ini  __init__.py
gecco/data/knn/: __init__.py  all_pfams.tsv  types.tsv
gecco/data/model/: __init__.py  crf.model  crf.model.md5  feat_v8_param_v2.crf.model.md5
gecco/hmmer/: .gitignore  Pfam.ini  Tigrfam.ini  __init__.py  _worker.py
gecco/interpro/: .gitignore  __init__.py
gecco/knn/: __init__.py  compositions.npz  domains.tsv  types.tsv
gecco/types/: __init__.py  binarizer.py  compositions.npz  domains.tsv  types.tsv
main/: crf.py  cross_validation.py  preprocessing.py
orion/: bgc.py  crf.py  cross_validation.py  hmmer.py  interface.py  knn.py  orf.py  preprocessing.py  refine.py  utils.py
pkg/aur/: PKGBUILD.in
scripts/: crf_cv.py  crf_train.py  gecco_annotate.py  gecco_cv.py  gecco_extract.py  gecco_loto.py  gecco_predict.py  gecco_train.py  gecco_type.py  interface.py  orion_cv.py  orion_extract.py  orion_knn.py  orion_loto.py  orion_predict.py  orion_refine.py  orion_train.py
tests/: test_bgc.py  test_cli.py  test_doctest.py  test_orf.py  test_preprocessing.py
tests/data/: BGC0001866.features.tsv  BGC0001866.gbk  SRR492066.fna
tests/test_cli/: BGC0001866.clusters.tsv  BGC0001866.features.tsv  _base.py  mibig-2.0.Pfam-33.0.Tigrfam-15.0.clusters.tsv  mibig-2.0.Pfam-33.0.Tigrfam-15.0.tsv  test_convert.py  test_cv.py  test_embed.py  test_help.py  test_run.py  test_train.py
tests/test_cli/data/: BGC0001866.1_cluster_1.gbk  BGC0001866.clusters.tsv  BGC0001866.features.tsv  BGC0001866.gbk  BGC0001866.genes.tsv  BGC0001866.sideload.json  mibig-2.0.Pfam-33.0.Tigrfam-15.0.features.tsv  mibig-2.0.proG2.clusters.tsv  mibig-2.0.proG2.genes.tsv  mibig-2.0.proG2.gff
tests/test_crf/: test_crf.py  test_features.py  test_preprocessing.py
tests/test_hmmer/: test_pyhmmer.py
tests/test_hmmer/data/: minipfam.hmm  proteins.faa
tests/test_model/: test_clustertable.py  test_genetable.py
tests/test_orf/: BGC0001737.fna  test_cds.py  test_pyrodigal.py
tests/test_orf/data/: BGC0001377.gbk  BGC0001737.faa
