[build-system]
build-backend = "setuptools.build_meta"
requires = [
    'setuptools >=39.2', 
    'rich >=12.4.0', 
    'pyhmmer ~=0.11.0', 
    'wheel >=0.30'
]

[project]
name = "gecco-tool"
dynamic = ["version"]
description = "Gene Cluster prediction with Conditional random fields."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
  { name = "Laura Carroll", email = "lmc297@cornell.edu" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Typing :: Typed",
]
dependencies = [
    "biopython ~=1.73",
    "docopt ~=0.6.2",
    "importlib-metadata >=4.0      ; python_version < '3.10'",
    "importlib-resources >=1.0     ; python_version < '3.9'",
    "numpy >=1.0,<3.0",
    "polars ~=1.0",
    "psutil ~=6.0",
    "pyhmmer ~=0.11.0",
    "pyrodigal ~=3.0",
    "rich >=12.4.0",
    "scikit-learn ~=1.0",
    "scipy ~=1.4",
    "sklearn-crfsuite ~=0.3.6",
]

[project.urls]
"Repository" = "https://github.com/zellerlab/GECCO"
"Bug Tracker" = "https://github.com/zellerlab/GECCO/issues"
"Changelog" = "https://github.com/zellerlab/GECCO/blob/master/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/zellerlab/GECCO/"
"Builds" = "https://git.embl.de/grp-zeller/GECCO/-/pipelines"
"Preprint" = "https://www.biorxiv.org/content/10.1101/2021.05.03.442509v1"

[project.optional-dependencies]
train = [
    "fisher ~=0.1.10",
    "statsmodels >=0.13,<0.15",
]

[project.entry-points.console_scripts]
gecco = "gecco.cli:main"

[project.entry-points."gecco.cli.commands"]
annotate = "gecco.cli.commands.annotate:Annotate"
convert = "gecco.cli.commands.convert:Convert"
cv = "gecco.cli.commands.cv:Cv [train]"
run = "gecco.cli.commands.run:Run"
train = "gecco.cli.commands.train:Train [train]"
help = "gecco.cli.commands.help:Help"
predict = "gecco.cli.commands.predict:Predict"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
include = ["gecco"]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "gecco.__version__"}

[tool.coverage.report]
include = ["gecco/*"]
omit = ["tests/*"]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:",
    "@abc.abstractmethod",
    "@abc.abstractproperty",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise UnexpectedError",
    "raise AllocationError",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
